docs/v4.0.0/_sources/gallery/extras/coupling_vs_NA.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/coupling_vs_NA.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_coupling_vs_NA.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_coupling_vs_NA.py:


Sphere: Coupling vs numerical aperture
======================================

.. GENERATED FROM PYTHON SOURCE LINES 7-8

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 8-57

.. code-block:: Python

    import numpy as np
    from PyMieSim.units import ureg
    from PyOptik import Material

    from PyMieSim import experiment
    from PyMieSim import single

    source = experiment.source.Gaussian(
        wavelength=500 * ureg.nanometer,
        polarization=0 * ureg.degree,
        optical_power=1e-3 * ureg.watt,
        NA=0.2 * ureg.AU,
    )

    scatterer = experiment.scatterer.Sphere(
        diameter=500e-9 * ureg.meter,
        refractive_index=Material.BK7,
        medium_refractive_index=1 * ureg.RIU,
        source=source,
    )

    detector = experiment.detector.Photodiode(
        NA=np.linspace(0.1, 1, 150) * ureg.AU,
        phi_offset=0 * ureg.degree,
        gamma_offset=[0, 10] * ureg.degree,
        sampling=2000 * ureg.AU,
    )

    setup = experiment.Setup(scatterer=scatterer, source=source, detector=detector)

    dataframe = setup.get("coupling", drop_unique_level=True)

    dataframe.plot(x="detector:NA")

    single_source = single.Gaussian(
        wavelength=950 * ureg.nanometer,
        polarization=0 * ureg.degree,
        optical_power=1e-3 * ureg.watt,
        NA=0.2 * ureg.AU,
    )

    single_scatterer = single.scatterer.Sphere(
        diameter=500 * ureg.nanometer,
        refractive_index=1.5 * ureg.RIU,
        medium_refractive_index=1 * ureg.RIU,
        source=single_source,
    )

    print(single_scatterer.Qsca)



.. image-sg:: /gallery/extras/images/sphx_glr_coupling_vs_NA_001.png
   :alt: coupling vs NA
   :srcset: /gallery/extras/images/sphx_glr_coupling_vs_NA_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    1.0161565882863277 dimensionless





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.378 seconds)


.. _sphx_glr_download_gallery_extras_coupling_vs_NA.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coupling_vs_NA.ipynb <coupling_vs_NA.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coupling_vs_NA.py <coupling_vs_NA.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coupling_vs_NA.zip <coupling_vs_NA.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
